# PrettyPath

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  config.json  pathfinding.py  plot_path.py
data/: peaks.csv
gui/: package-lock.json  package.json  server.js  tailwind.config.js
gui/src/: Actions.js  App.js  ElevationChart.js  FileNamePicker.js  GPXMap.js  PathConstraints.js  PathCostSilders.js  RunButton.js  SaveConfigButton.js  Settings.js  TarnConstraints.js  TarnLayer.js  index.js  output.css  parseElevationData.js  parseGPX.js
include/OSMParser/: handler.hh
include/PrettyPath/: config.hh  graph.hh  parser.hh  pathfinder.hh  poirouter.hh  settings.hh  tarnrouter.hh  utils.hh
src/: osmparser.cpp  prettypath.cpp
src/OSMParser/: handler.cpp  main.cpp
src/PrettyPath/: graph.cpp  main.cpp  map.cpp  parser.cpp  pathfinder.cpp  poirouter.cpp  tarnrouter.cpp
